# CGMFModeslv1.1

./: .replit  ADVISORKHOJ_INTEGRATION_PLAN.md  API_DOCUMENTATION.md  CLEANUP_SUMMARY.md  COMMIT_DOCUMENTATION.md  COMPREHENSIVE_SYSTEM_ANALYSIS_JULY_2025.md  DATABASE_SCHEMA_MAPPING.md  DATA_SOURCES_DOCUMENTATION.md  DEPLOYMENT_READY.md  DOCUMENTATION_UPDATE_SUMMARY.md  PERFORMANCE_TEST_REPORT.md  PORTFOLIO_HOLDINGS_STATUS.md  README.md  TECHNICAL_ARCHITECTURE.md  accelerated-coverage-expansion.js  accelerated-synthetic-elimination.js  activate-complete-scoring-system.cjs  aggressive-5y-ytd-expansion.js  amfi-coverage-verification.js  apply-metrics-migration.js  authentic-data-cleanup-and-verification.js  authentic-data-validation-comprehensive.js  authentic-data-validation-service.ts  authentic-validation-data-integrity-fix.js  authentic-validation-requirements-analysis.md  backtesting-comparison-analysis.md  backtesting-system-fixes.md  backtesting-system-status.md  batch-historical-import.js  calculate-authentic-elivate.js  calculate-enhanced-elivate-complete.js  category-ranking-deep-dive.cjs  check-import-status.js  clear-and-reimport-nav.js  complete-5y-ytd-expansion.js  complete-advanced-ratios-final.js  complete-advanced-ratios-implementation.js  complete-category-expansion.cjs  complete-category-ranking.cjs  complete-corrected-scoring-with-proper-rankings.js  (+158 more)
archived-scripts/: add-missing-5y-ytd-analysis.js  amfi-nav-import.js  analyze-missing-scoring-components.js  analyze-scheme-code-mismatch.js  batch-scoring-trigger.js  calculate-enhanced-elivate-complete.js  (+52 more)
(+179 files in other folders)
